Bug 116093 -- fixing coordinates passed to windowless plugin, r=peterl, sr=attinasi